# rtsp-playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  get_libs.sh  run.sh  setup_tools.sh
Doc/: BUILD_SETUP.md
lib/: get_bin_ffmpeg.sh  get_bin_x264.sh
src/: main.cpp
test/: rtsp-check.sh  rtsp-stream.sh
